namespaces/live.cloud-platform.service.justice.gov.uk/offender-case-notes-dev/00-namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: offender-case-notes-dev
  labels:
    cloud-platform.justice.gov.uk/is-production: "false"
    cloud-platform.justice.gov.uk/environment-name: "dev"
    pod-security.kubernetes.io/enforce: restricted
  annotations:
    cloud-platform.justice.gov.uk/business-unit: "HMPPS"
    cloud-platform.justice.gov.uk/application: "offender-case-notes"
    cloud-platform.justice.gov.uk/owner: "Connect DPS: dps-hmpps@digital.justice.gov.uk"
    cloud-platform.justice.gov.uk/source-code: "https://github.com/ministryofjustice/offender-case-notes.git"
    cloud-platform.justice.gov.uk/slack-alert-channel: "connect-dps-non-prod-alerts"
    cloud-platform.justice.gov.uk/slack-channel: "connect-dps"
    cloud-platform.justice.gov.uk/team-name: "connect-dps"
